attempt to fix caption spacing

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -244,6 +244,7 @@ figure {
 /* Figure captions */
 
 figcaption {
+  margin-top: -0.5em;
   margin-bottom: 0.5em;
   color: $muted-text-color;
   font-family: $caption-font-family;
